--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Code Drop</title>
 </head>
 <body>
+    <h1>dit is een test</h1>
 <div id="particles-js">
     <div class="background">
     </div>
