added logo and preview html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            margin: 0;
+            font-family: roboto;
+            overflow-x: hidden;
+        }
+
+        #particles-js {
+            background: #121212;
+            height: 150vh;
+            width: 100vw;
+        }
+
+        .main-container {
+            position: absolute;
+        }
+
+        .topheader {
+            height: 30px;
+            width: 100vw;
+            background-color: #1e1e1e;
+            border-bottom: 1px solid #252527;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+        }
+
+        .announcements {
+            color: #e1e1e1;
+            padding-top: 2px;
+        }
+
+        .main-header {
+            height: 75px;
+            width: 100vw;
+            background-color: #1e1e1e;
+            border-bottom: 1px solid #252527;
+            margin-bottom: 25px;
+        }
+
+        .main-content {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+        }
+
+        .header-img {
+            margin-top: -20px;
+        }
+
+        .header-title {
+            color: #e1e1e1;
+            margin-left: 1px;
+            text-align: center;
+            padding-right: 44px;
+        }
+
+        .header {
+            color: white;
+        }
+
+
+        .fluid button {
+            background-color: #FF4181;
+        !important;
+            color: #e1e1e1;
+            width: 50%;
+            font-size: 99px;
+            border: none;
+        }
+
+        .pay-button:hover {
+            cursor: pointer;
+        }
+
+    </style>
     <meta charset="UTF-8">
     <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -23,7 +99,7 @@
                 <h2 class="header-title">CodeDrop Shop</h2>
             </div>
         </div>
-        <div class="ui container" >
+        <div class="ui container">
             <div class="ui four column grid">
                 <div class="row">
                     <div class="column" style="margin-bottom: 25px;">
@@ -198,4 +274,4 @@
 
 </body>
 </html>
-<?php
+
