--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" rel="stylesheet"
+          id="bootstrap-css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <title>Code Drop</title>
+    <link rel="icon" href="images/codedrop-logo.png">
     <style>
         body {
             margin: 0;
@@ -51,10 +60,8 @@
             margin-top: -20px;
         }
 
-        .header-title {
-            color: #e1e1e1;
-            margin-left: 1px;
-            text-align: center;
+        .header-imgtext {
+            margin-top: 4px;
             padding-right: 44px;
         }
 
@@ -76,27 +83,34 @@
             cursor: pointer;
         }
 
+        footer {
+            background-color: #1e1e1e;
+            width: 100%;
+            height: 75px;
+            border-top: #FF4181 1px solid;
+        }
+
+        .footer-copyright {
+            padding-top: 20px;
+            color: #e1e1e1;
+            text-align: center;
+        }
+
+        .discord {
+            cursor: pointer;
+        }
     </style>
-    <meta charset="UTF-8">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" rel="stylesheet"
-          id="bootstrap-css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>Code Drop</title>
-    <link rel="icon" href="images/codedrop-logo.png">
 </head>
 <body>
 <div id="particles-js">
     <div class="main-container">
         <div class="topheader">
-            <span class="announcements">CodeDrop shop, Your all in one Fortnite Exclusive shop</span>
+            <span class="announcements">Join the CodeDrop Discord today! <a class="discord" href="https://discordapp.com/invite/codedrop" target="_blank">Click here</a></span>
         </div>
         <div class="main-header">
             <div class="main-content">
-                <img class="header-img" src="images/cdlogo.png" width="120" height="120">
-                <h2 class="header-title">CodeDrop Shop</h2>
+                <img class="header-img" src="images/christmastlogo.png" width="120" height="120">
+                <img class="header-imgtext" src="images/logotext.png" width="300" height="60">
             </div>
         </div>
         <div class="ui container">
@@ -250,7 +264,12 @@
                 </div>
             </div>
         </div>
-
+        <br>
+        <br>
+        <br>
+        <footer>
+            <h2 class="footer-copyright">Made by @RediceFN ©</h2>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
@@ -274,4 +293,4 @@
 
 </body>
 </html>
-
+<?php
